--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li>
                     <a href='#inscription' onclick="removeothers('inscription');">
                         <span class="icone">
-                            <i class="fa fa-plus"></i>AJOUTER UN PATIENT</span>
+                            <i class="fa fa-plus"></i>AJOUTER UN PATIENT aaaaaaaa</span>
                     </a>
                 </li>
                 <li>
